Complete refactor of all apis